sanitize command line arguments against semver

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
       "name": "Jacob Friis Saxberg",
       "email": "jacob@saxberg.dk"
     }
-  ]
+  ],
+  "dependencies": {
+    "semver": "^2.2.1"
+  }
 }
